2004-10-02  Thomas Soumarmon <thomas.soumarmon@cogitae.net>
	
	* backend/hp5400_internal.c: hp5400 version mathing test
          has been removed by default.
          To enable it :
          CFLAGS="-DSTRING_VERSION_MATCH" ./configure

2004-10-02  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added several
	  scanners. Removed Genius Vivid 1200 XE (actually supported by
	  gt68xx backend).
	* backend/gt68xx.c backend/gt68xx.conf backend/gt68xx_devices.c
	  doc/sane-gt68xx.man doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES: Updates of supported scanners.

2004-10-01  Oliver Rauch <Oliver.Rauch@Rauch-DOmain.DE>

	* backend/umax-scanner.c, umax.conf and umax.desc:
	  added "LinoHell", "OPAL2 " as supported device

2004-09-28  Mattias Ellert <mattias.ellert@tsl.uu.se>

	* po/sane-backends.sv.po: Updated Swedish translation file

2004-09-27  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* doc/descriptions/unsupported.desc doc/descriptions/snapscan.desc:
	  Changed entry for Epson 2580 (should work with SnapScan backend).

2004-09-21  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/descriptions/unsupported.desc: fixed Plustek entries.

2004-09-19  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Compeye Simplex 1236C.

2004-09-14  Karl Heinz Kremer <khk@khk.net>
	
	* backend/epson_usb.c: add USB device ID for CX6400 back in
	* backend/epson.c: disable "feed" command for Perfection 1640 w/ ADF

2004-09-08  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/plustek/Plustek-USB.changes: Update.
	* doc/descriptions/unsupported.desc: Added Microtek Scanmaker 5700,
	  ArtixScan 4000tf and Medion MD41985.

2004-09-06  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* configure: Regenerated.
	* doc/descriptions/unsupported.desc
	  doc/descriptions-external/genesys.desc: Moved HP 35xx series to
	  unsupported.desc because these scanners use a RTS8801 chip (no
	  Genesys chipset).
	