@@ -94,7 +94,6 @@ _UsbWriteControl (int fd, int iValue, int iIndex, void *pabData, int iSize)
 
 }
 
-HP5400_SANE_STATIC
 void
 hp5400_command_write_noverify (int fd, int iValue, void *pabData, int iSize)
 {
@@ -118,7 +117,6 @@ _UsbReadControl (int fd, int iValue, int iIndex, void *pabData, int iSize)
 }
 
 
-HP5400_SANE_STATIC
 int
 hp5400_open (const char *filename)
 {
@@ -159,7 +157,6 @@ hp5400_open (const char *filename)
 }
 
 
-HP5400_SANE_STATIC
 void
 hp5400_close (int iHandle)
 {
@@ -168,7 +165,6 @@ hp5400_close (int iHandle)
 
 
 /* returns value > 0 if verify ok */
-HP5400_SANE_STATIC
 int
 hp5400_command_verify (int iHandle, int iCmd)
 {
@@ -210,7 +206,6 @@ hp5400_command_verify (int iHandle, int iCmd)
 
 
 /* returns > 0 if command OK */
-HP5400_SANE_STATIC
 int
 hp5400_command_read_noverify (int iHandle, int iCmd, int iLen, void *pbData)
 {
@@ -229,7 +224,6 @@ hp5400_command_read_noverify (int iHandle, int iCmd, int iLen, void *pbData)
 }
 
 /* returns > 0 if command OK */
-HP5400_SANE_STATIC
 int
 hp5400_command_read (int iHandle, int iCmd, int iLen, void *pbData)
 {
@@ -240,7 +234,6 @@ hp5400_command_read (int iHandle, int iCmd, int iLen, void *pbData)
 
 
 /* returns >0 if command OK */
-HP5400_SANE_STATIC
 int
 hp5400_command_write (int iHandle, int iCmd, int iLen, void *pbData)
 {
@@ -258,8 +251,8 @@ hp5400_command_write (int iHandle, int iCmd, int iLen, void *pbData)
   return hp5400_command_verify (iHandle, iCmd);
 }
 
+#ifdef STANDALONE
 /* returns >0 if command OK */
-HP5400_SANE_STATIC
 int
 hp5400_bulk_read (int iHandle, size_t len, int block, FILE * file)
 {
@@ -299,9 +292,9 @@ hp5400_bulk_read (int iHandle, size_t len, int block, FILE * file)
   /* error handling? */
   return 0;
 }
+#endif
 
 /* returns >0 if command OK */
-HP5400_SANE_STATIC
 int
 hp5400_bulk_read_block (int iHandle, int iCmd, void *cmd, int cmdlen,
 			void *buffer, int len)
@@ -324,7 +317,6 @@ hp5400_bulk_read_block (int iHandle, int iCmd, void *cmd, int cmdlen,
 }
 
 /* returns >0 if command OK */
-HP5400_SANE_STATIC
 int
 hp5400_bulk_command_write (int iHandle, int iCmd, void *cmd, int cmdlen,
 			   int datalen, int block, char *data)
@@ -365,12 +357,12 @@ hp5400_bulk_command_write (int iHandle, int iCmd, void *cmd, int cmdlen,
   return hp5400_command_verify (iHandle, iCmd);
 }
 
+#ifdef STANDALONE
 /**
   ScannerIsOn
     retrieve on/off status from scanner
     @return 1 if is on 0 if is off -1 if is not reachable
 */
-HP5400_SANE_STATIC
 int
 hp5400_isOn (int iHandle)
 {
@@ -389,3 +381,5 @@ hp5400_isOn (int iHandle)
 
   return 0;			/* is off */
 }
+#endif
+
