@@ -85,8 +85,10 @@ HP5400_SANE_STATIC int hp5400_command_read (int iHandle, int iCmd, int iLen, voi
 /* returns >0 if command OK */
 HP5400_SANE_STATIC int hp5400_command_write (int iHandle, int iCmd, int iLen, void *pbData);
 
+#ifdef STANDALONE
 /* returns >0 if command OK */
 HP5400_SANE_STATIC int hp5400_bulk_read (int iHandle, size_t len, int block, FILE * file);
+#endif
 
 /* returns >0 if command OK */
 HP5400_SANE_STATIC int hp5400_bulk_read_block (int iHandle, int iCmd, void *cmd, int cmdlen,
